# tyto

./: .gitignore  .memso.toml  .tyto.toml  CONTRIBUTING.md  Cargo.toml  devenv.nix
.claude-plugin/: marketplace.json
.gemini/: settings.json
.github/workflows/: build-stubs.yml  ci.yml  dev-release.yml  e2e.yml  release.yml
agents/claude/: .mcp.json
agents/claude-local/.claude-plugin/: marketplace.json
agents/claude/.claude-plugin/: plugin.json
agents/claude/hooks/: hooks.json
agents/claude/scripts/: bootstrap.sh  run.sh
agents/gemini/: GEMINI.md  gemini-extension.json
agents/gemini/hooks/: hooks.json
docs/: TURSO_MIGRATION_EXPERIMENT.md  setup.md
docs/dev/: npm-distribution.md
docs/hooks/: claude-code.json  cline-task-start.sh  gemini-cli.json
docs/rules/: CLAUDE.md  cursor.md
examples/: repro_turso_issues.rs
npm/@coree-ai/coree/: package.json
npm/@coree-ai/coree-darwin-arm64/: package.json
npm/@coree-ai/coree-linux-arm64/: package.json
npm/@coree-ai/coree-linux-x64/: package.json
npm/@coree-ai/coree-model-bge-small-en-v1.5/: package.json
npm/@coree-ai/coree-win32-x64/: package.json
npm/@coree-ai/coree/.claude-plugin/: plugin.json
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: bootstrap.sh
scripts/: build-local.mjs  e2e_mcp.py  fetch-model.py  generate-npm-packages.mjs  pack-local.mjs  test_inject_states.py
src/: capture.rs  config.rs  db.rs  embed.rs  format.rs  inject.rs  install.rs  lib.rs  log.rs  main.rs  migrations.rs  project_id.rs  remote.rs  request.rs  retrieve.rs  sanitize.rs  serve.rs  status.rs  store.rs
src/index/: git.rs  indexer.rs  mod.rs  parser.rs  schema.rs  search.rs  watcher.rs
src/migrations/: v001_initial.sql
tests/: db.rs
