[package]
name = "tyto"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Persistent memory and code intelligence for AI agents, backed by libSQL and Turso"

[dependencies]
# MCP stdio transport
rmcp = { version = "*", features = ["server", "client", "transport-io"] }

# Database - pure Rust SQLite engine with Turso sync
turso = { version = "0.6.0-pre.22", features = ["sync"] }

# Local ONNX embeddings (bge-small-en-v1.5)
fastembed = { version = "*", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

# Async runtime
tokio = { version = "*", features = ["full"] }

# CLI argument parsing
clap = { version = "*", features = ["derive"] }

# Serialisation
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# In-place TOML editing that preserves comments and formatting
toml_edit = "*"

# Layered configuration: file < env vars, with automatic TYTO__SECTION__FIELD mapping
figment = { version = "*", features = ["toml", "env"] }

# UUIDs for session_id and memory IDs
uuid = { version = "*", features = ["v4"] }

# Content hash dedup
sha2 = "*"

# Stub binary: sync HTTP download for first-install bootstrap
ureq = { version = "*", features = ["rustls"], default-features = false }

# Stub binary: archive extraction for first-install download
flate2 = "*"
tar = "*"
zip = "*"

# JSON schema generation for MCP tool definitions
schemars = "*"

# Flexible deserialisation: Claude Code's MCP client sends numeric and array params
# as JSON strings regardless of schema type. serde_with PickFirst + DisplayFromStr
# accepts both native JSON types and string-encoded values transparently.
serde_with = { version = "*", features = ["macros", "json"] }

# Secret sanitization
regex = "*"

# Structured tracing and timing instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "*"
tempfile = "*"

# Time
chrono = { version = "*", features = ["serde"] }

# Hex encoding for content hashes
hex = "*"

# XDG/platform config and cache directories
dirs = "*"
fs4 = "*"

# Code intelligence: AST parsing
tree-sitter = "*"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-typescript = "*"
tree-sitter-javascript = "*"
tree-sitter-go = "*"
tree-sitter-cpp = "*"
tree-sitter-java = "*"
tree-sitter-c = "*"
tree-sitter-bash = "*"
tree-sitter-ruby = "*"
tree-sitter-c-sharp = "*"
tree-sitter-php = "*"
tree-sitter-scala = "*"
tree-sitter-swift = "*"
tree-sitter-elixir = "*"
tree-sitter-lua = "*"
tree-sitter-haskell = "*"
tree-sitter-nix = "*"
tree-sitter-solidity = "*"
tree-sitter-kotlin-ng = "*"
tree-sitter-ocaml = "*"
tree-sitter-r = "*"
tree-sitter-zig = "*"
tree-sitter-erlang = "*"
tree-sitter-ql = "*"
tree-sitter-elm = "*"
tree-sitter-powershell = "*"
tree-sitter-dart = "*"
tree-sitter-objc = "*"
tree-sitter-tlaplus = "*"
tree-sitter-css = "*"
tree-sitter-json = "*"
tree-sitter-html = "*"
tree-sitter-yaml = "*"
tree-sitter-hcl = "*"
tree-sitter-toml-ng = "*"
tree-sitter-md = "*"
tree-sitter-embedded-template = "*"
tree-sitter-diff = "*"
tree-sitter-xml = "*"
tree-sitter-sequel = "*"

# Code intelligence: gitignore-aware file walking
ignore = "*"

# Code intelligence: live file watching for incremental reindex
notify = { version = "*", features = ["macos_fsevent"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
