[package]
name = "tyto"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "Persistent memory and code intelligence for AI agents, backed by libSQL and Turso"

[dependencies]
# MCP stdio transport
rmcp = { version = "1.5.0", features = ["server", "client", "transport-io"] }

# Database - pure Rust SQLite engine with Turso sync
turso = { version = "0.6.0-pre.22", features = ["sync"] }

# Local ONNX embeddings (bge-small-en-v1.5)
fastembed = { version = "5.13.3", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

# Async runtime
tokio = { version = "1.52.1", features = ["full"] }

# CLI argument parsing
clap = { version = "4.6.1", features = ["derive"] }

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# In-place TOML editing that preserves comments and formatting
toml_edit = "0.25.11"

# Layered configuration: file < env vars, with automatic TYTO__SECTION__FIELD mapping
figment = { version = "0.10.19", features = ["toml", "env"] }

# UUIDs for session_id and memory IDs
uuid = { version = "1.23.1", features = ["v4"] }

# Content hash dedup
sha2 = "0.11.0"

# Stub binary: sync HTTP download for first-install bootstrap
ureq = { version = "3.3.0", features = ["rustls"], default-features = false }

# Stub binary: archive extraction for first-install download
flate2 = "1.1.9"
tar = "0.4.45"
zip = "8.5.1"

# JSON schema generation for MCP tool definitions
schemars = "1.2.1"

# Flexible deserialisation: Claude Code's MCP client sends numeric and array params
# as JSON strings regardless of schema type. serde_with PickFirst + DisplayFromStr
# accepts both native JSON types and string-encoded values transparently.
serde_with = { version = "3.18.0", features = ["macros", "json"] }

# Secret sanitization
regex = "1.12.3"

# Structured tracing and timing instrumentation
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Error handling
anyhow = "1.0.102"
tempfile = "3.27.0"

# Time
chrono = { version = "0.4.44", features = ["serde"] }

# Hex encoding for content hashes
hex = "0.4.3"

# XDG/platform config and cache directories
dirs = "6.0.0"
fs4 = "1.0.2"

# Code intelligence: AST parsing
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-bash = "0.25.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-php = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-swift = "0.7.1"
tree-sitter-elixir = "0.3.5"
tree-sitter-lua = "0.5.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-nix = "0.3.0"
tree-sitter-solidity = "1.2.13"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-ocaml = "0.24.2"
tree-sitter-r = "1.2.0"
tree-sitter-zig = "1.1.2"
tree-sitter-erlang = "0.16.0"
tree-sitter-ql = "0.23.1"
tree-sitter-elm = "5.9.0"
tree-sitter-powershell = "0.26.3"
tree-sitter-dart = "0.1.0"
tree-sitter-objc = "3.0.2"
tree-sitter-tlaplus = "1.5.0"
tree-sitter-css = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-html = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-hcl = "1.1.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-md = "0.5.3"
tree-sitter-embedded-template = "0.25.0"
tree-sitter-diff = "0.1.0"
tree-sitter-xml = "0.7.0"
tree-sitter-sequel = "0.3.11"

# Code intelligence: gitignore-aware file walking
ignore = "0.4.25"

# Code intelligence: live file watching for incremental reindex
notify = { version = "8.2.0", features = ["macos_fsevent"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
